[package]
name = "delicious"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delicious-jose = { version = "0.1.0", path = "../delicious-jose" }

axum = "0.5.16"
futures = "0.3.24"
headers-core = "0.2.0"
serde = { version = "1.0.145", features = ["derive"] }
time = { version = "0.3.14", features = ["serde", "serde-well-known"] }
tokio = { version = "1.21.1", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1", "with-time-0_3"] }
tower = { version = "0.4.13", features = ["timeout"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-tree = "0.2.1"
uuid = { version = "1.1.2", features = ["serde"] }
