[package]
name = "delicious-jose"
version = "0.1.0"
edition = "2021"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
license = "MIT"
readme = "README.md"
description = """A library to work with Javascript Object Signing and Encryption(JOSE),
including JSON Web Tokens (JWT), JSON Web Signature (JWS) and JSON Web Encryption (JWE)."""
homepage = "https://github.com/conradludgate/delicious"
repository = "https://github.com/conradludgate/delicious"
keywords = ["jwt", "json", "jose", "jwe", "jws"]
categories = ["authentication", "web-programming"]

[dependencies]
base64 = "0.13"
time = { version = "0.3", default-features = false, features = ["std", "serde"] }
once_cell = "1.8.0"
num-bigint = "0.4"
num-traits = "0.2"
ring = "~0.16.20"
serde = { version = "1.0.126", features=["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
smallvec = "1.9.0"

[dev-dependencies]
serde_test = "1.0"
hex = "0.4"
