[package]
name = "delicious-jose"
version = "0.1.0"
edition = "2021"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
license = "MIT"
readme = "README.md"
description = """A library to work with Javascript Object Signing and Encryption(JOSE),
including JSON Web Tokens (JWT), JSON Web Signature (JWS) and JSON Web Encryption (JWE)."""
homepage = "https://github.com/conradludgate/delicious"
repository = "https://github.com/conradludgate/delicious"
keywords = ["jwt", "json", "jose", "jwe", "jws"]
categories = ["authentication", "web-programming"]

[dependencies]
time = { version = "0.3", default-features = false, features = ["std", "serde"] }
base64 = "0.13"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0.126", features=["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10.6"
digest = "0.10.5"
hmac = "0.12.1"
cbc = "0.1.2"
aes = "0.8.1"
cipher = { version = "0.4.3", features = ["alloc"] }
crypto-common = "0.1.6"
bytemuck = { version = "1.12.1", features = ["extern_crate_alloc"] }
pbkdf2 = "0.11.0"
aead = "0.5.1"
aes-gcm = "0.10.1"
rand = "0.8.5"
p256 = "0.11.1"
p384 = "0.11.2"
ecdsa = "0.14.8"
signature = "1.6.3"
elliptic-curve = "0.12.3"
sec1 = "0.3.0"

[dev-dependencies]
serde_test = "1.0"
hex-literal = "0.3"
hex = "0.4"
